--- a/metadata.yaml
+++ b/metadata.yaml
@@ -31,5 +31,6 @@ subjects:
 - !lcsh 'World War, 1914-1918 -- Fiction'
 - !lcsh 'Europe -- Fiction'
 - !lcc 'PR'
+- GITenberg
 title: The Island Mystery
 url: http://www.gutenberg.org/ebooks/29644
